setting date fields so that birthday can't be after today, and due date for tasks can't be before today

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                         </div>
                         <div class="hideNonRepeat">
                             <label for="configureTasksDueDate">Due date</label>
-                            <input type="date" id ="configureTasksDueDate">
+                            <input type="date" id ="configureTasksDueDate" data-theme="a">
                         </div>
 
                         <label>Payment</label>
