--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Tykoon 2.0</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=1024, user-scalable=no">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/onboardingFlow.css">
+
         <link rel="stylesheet" href="themes/basicTheme.min.css" />
         <!-- <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile.structure-1.3.1.css"> -->
         <link rel="stylesheet" href="css/vendor/jquery.mobile.structure-1.3.1.css">
+
+        <!-- please keep this last -->
+        <link rel="stylesheet" href="css/onboardingFlow.css">
+        <!-- /please keep this last -->
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
