fix task list scrolling

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         </form>
                         
                         <!-- Task Catalog of recommended tasks for age/gender -->
-                        <div class="taskCatalog clearfix">
+                        <div class="taskCatalog">
                             <div class="title">Popular tasks for <span class="childAge">[#]</span> year old <span class="childGender">[gender]</span>s</div>
                             <div class="tasks"></div>
                         
