setting up gettingStarted form to be able to use validation

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                             <input type="date" id="getStartedFormChildBirthday" data-theme="a" />
                             <label for="getStartedFormChildGender">Gender</label>
                             <fieldset data-role="controlgroup" data-type="horizontal" id="getStartedFormChildGender" data-theme="a">
-                                <input type="radio" name="getStartedFormChildGender" id="genderBoy" value="m"  data-theme="a" />
+                                <input type="radio" name="getStartedFormChildGender" checked id="genderBoy" value="m"  data-theme="a" />
                                 <label for="genderBoy">Boy</label>
                                 <input type="radio" name="getStartedFormChildGender" id="genderGirl" value="f"  data-theme="a" />
                                 <label for="genderGirl">Girl</label>
                             </fieldset>
+                            <input type="submit"  data-theme="a" data-inline="true" id="getStartedFormSubmit" value="Get Started" />
                         </form>
-                        <a href="#startTasks" data-role="button"  data-theme="a" data-inline="true" id="getStartedFormSubmit">Get Started</a>
                     </div>
                  </div>
             </div>
