lol, making it so that currentTask doesn't constantly clobber itself each time a "new" one is created.  actually create a new one to add to the stack

--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
                                     <label for="weeklySun">Sun</label>
                                 </fieldset>
                             </div>
-                        
                         </div>
+                        
                         <div class="hideNonRepeat">
                             <label for="configureTasksDueDate">Due date</label>
                             <input type="date" id ="configureTasksDueDate" data-theme="a">
@@ -256,7 +256,7 @@
                             </div>
                         </div>
 
-                        <button id="configureTasksAddIt">Add it</button>
+                        <input type="submit" id="configureTasksAddIt" value="Add it" />
                     </form>
                 </div>
             </div>
