--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
                                     <input type="checkbox" name="weeklySun" id="weeklySun" data-theme="a" value="sun" />
                                     <label for="weeklySun">Sun</label>
                                 </fieldset>
+                                <div class="error" id="pickADay">Choose at least 1 day of the week</div>
                             </div>
                         </div>
                         
@@ -251,6 +252,7 @@
                                 <p class="money">
                                     <label for="configureTasksHowMuch">How Much?</label>
                                     <input type="number" id="configureTasksHowMuch">
+                                    <div class="error" id="enterTaskMoney">Please enter how much</div>
                                 </p>
                                 <p class="resp">It's nice to help out just because</p>
                             </div>
