--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Tykoon 2.0</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=1024, user-scalable=no">
+
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
