adding clear buttons to the text fields once you start typing

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                     <label class="title" for="addTasksFormTaskName">What do you want <span class="childFirstName">[firstName]</span> to do?</label>
                                     <div class="ui-grid-a">
                                         <div class="ui-block-a">
-                                            <input type="text" id="addTasksFormTaskName" data-theme="a" placeholder="Type here to create your own" data-path=".title" data-control-type="textbox" data-control-name="title-filter" data-control-action="filter" />
+                                            <input type="text" id="addTasksFormTaskName" data-theme="a" placeholder="Type here to create your own" data-clear-btn="true" data-path=".title" data-control-type="textbox" data-control-name="title-filter" data-control-action="filter" />
                                         </div>
                                         <div class="ui-block-b">
                                             <input type="button" data-theme="a" value="Configure" />
@@ -156,7 +156,7 @@
                             <label class="title" for="addGoalFormGoalName">What would motivate <span class="childFirstName">[firstName]</span>?</label>
                             <div class="ui-grid-a">
                                 <div class="ui-block-a">
-                                    <input type="text" id="addGoalFormGoalName" data-theme="a" placeholder="Product / charity / save" />
+                                    <input type="text" id="addGoalFormGoalName" data-theme="a" data-clear-btn="true" placeholder="Product / charity / save" />
                                 </div>
                                 <div class="ui-block-b">
                                     <input type="button" data-theme="a" value="Configure" />
