--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </div>
                     <div data-role="content" class="setAllowance">
                         <label for="slider-fill">Set <span class="childPossesivePronoun"></span> allowance per week</label>
-                        <input type="range" name="slider-fill" data-theme="c" id="slider-fill" value="10" min="1" max="40" step=".5" data-highlight="true">
+                        <input type="range" name="slider-fill" data-theme="c" id="slider-fill" value="10" min="1" max="40" data-highlight="true">
                     </div>
                     <div class="selectedTasks">
                     </div>
