fixed add button styles

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                 <!-- Task HTML template for populating the UI from the DB -->
                                 <div class="taskTemplate">
                                     <div class="taskItem clearfix">
-                                        <div class="addButton"><input type="button" data-icon="plus" data-iconpos="notext" data-theme="a" /></div>
+                                        <div class="addButton">+</div>
                                         <div class="taskDetails">
                                             <div class="title"></div>
                                             <div class="numKids"><span></span> kids are doing this</div>
